# MovieLens-1M_Rec

./: .gitignore  AGENT.md  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
configs/data/: feature_basic.yaml  movielens1m.yaml
configs/experiment/: deep_ml1m.yaml
configs/model/: deep.yaml
configs/trainer/: lightning.yaml
docs/design/: data_pipeline.md  feature_integration_guide.md  project_overview.md  workflow_guide.md
scripts/: build_features.py  build_model_inputs.py  download_ml1m.py  preprocess_ml1m.py  train.py
src/movielens1m_rec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/recsys/: __init__.py  constants.py  metrics.py
src/recsys/data/: __init__.py  datamodule.py  dataset.py  downloader.py  parser.py  preprocess.py  sample_builder.py  splitter.py
src/recsys/features/: __init__.py  interaction_features.py  item_features.py  user_features.py
src/recsys/models/: __init__.py  base.py  deep.py
src/recsys/utils/: __init__.py  env.py  io.py  logger.py  seed.py  timer.py
tests/: conftest.py  test_config.py  test_dataset.py  test_downloader.py  test_metrics.py  test_preprocess.py  test_sample_builder.py  test_splitter.py  test_training.py
