[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movielens1m-rec"
version = "0.1.0"
description = "基于 MovieLens-1M 的排序推荐复现项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lightning>=2.2",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "torch>=2.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pyarrow>=14.0",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
